--- a/requirements.txt
+++ b/requirements.txt
@@ -253,7 +253,11 @@ pypandoc==1.13
 pyparsing==3.1.4
 pypdf==4.3.1
 pypdfium2==4.30.0
-pywinpty==2.0.13
+PyPika==0.48.9
+pyproject_hooks==1.1.0
+pyreadline3==3.4.1
+pysbd==0.3.4
+pytesseract==0.3.13
 PyYAML==6.0.2
 pyzmq==26.2.0
 ragas==0.1.15
