--- a/requirements.txt
+++ b/requirements.txt
@@ -305,8 +305,9 @@ timm==1.0.9
 tinycss2==1.3.0
 tokenizers==0.19.1
 toml==0.10.2
-torch==2.2.2+cu118
-torchaudio==2.2.2+cu118
+toolz==0.12.1
+torch==2.2.2
+torchaudio==2.2.2
 torchvision==0.17.2
 tornado==6.4.1
 tqdm==4.66.5
